--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,7 @@
   }
 
   .dark {
+    
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
@@ -78,6 +79,7 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+  
 }
 
 
@@ -87,5 +89,14 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+.react-flow__attribution {
+  display: none;
+}
+.dark {
+  .react-flow__controls-button {
+    @apply !bg-accent
   }
 }
